[tool.poetry]
name = "blocks"
version = "0.0.1"
description = "blocks is a python package with a framework for building deep learning models"
authors = ["dholland42 <danielholland414@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
