[tool.poetry]
name = "blocks"
version = "0.0.1"
description = "blocks is a python package with a framework for building deep learning models"
authors = ["dholland42 <danielholland414@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
tensorflow = {version = "2.1", optional = true}
tensorflow-gpu = {version = "2.1", optional = true}
tensorflow-estimator = {version = "2.1", optional = true}

[tool.poetry.extras]
cpu = ["tensorflow", "tensorflow-estimator"]
gpu = ["tensorflow-gpu", "tensorflow-estimator"]

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
